--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.54MB/s(Youtube:不良林), server: 38.121.43.71, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林), server: 213.183.53.200, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 🇺🇸 美国-1.94MB/s(Youtube:不良林), server: 38.75.136.102, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇳🇱 荷兰-1.74MB/s(Youtube:不良林), server: 37.120.192.158, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.39MB/s(Youtube:不良林), server: 38.121.43.71, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-1.70MB/s(Youtube:不良林), server: 38.68.134.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇳🇱 荷兰-1.26MB/s(Youtube:不良林), server: 37.120.192.158, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.80MB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇳 中国-275.6KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇺🇸 美国-3.14MB/s(Youtube:不良林), server: 38.75.136.102, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇨🇳 中国-3.64MB/s(Youtube:不良林), server: shkr2.vip.www.klrxyru.cn, port: 1552, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: 8d83584393.wns.windows.com}
   - {name: 🇨🇳 中国-5.42MB/s(Youtube:不良林), server: aiajp1.game.www.klrxyru.cn, port: 1460, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇨🇳 中国-593.0KB/s(Youtube:不良林), server: relayjp2.vip.www.klrxyru.cn, port: 1452, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇭🇰 香港-1.55MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-971.5KB/s(Youtube:不良林), server: relayjp2.vip.www.klrxyru.cn, port: 1452, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇭🇰 香港-3.19MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
   - {name: 🇺🇸 美国-374.8KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-275.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-593.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-971.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-374.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-275.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-593.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-971.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-374.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,51 +52,51 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-275.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-593.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-971.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-374.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-275.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-593.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-971.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-374.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-275.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-593.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-971.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-374.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -104,15 +104,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-275.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-593.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-971.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-374.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -129,15 +129,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.70MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-275.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-593.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-971.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.19MB/s(Youtube:不良林)
       - 🇺🇸 美国-374.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
