--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.49MB/s(Youtube:不良林), server: 38.75.136.102, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.54MB/s(Youtube:不良林), server: 38.121.43.71, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇳 中国-3.65MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: 38.68.134.85, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: 38.68.134.85, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇳🇱 荷兰-943.7KB/s(Youtube:不良林), server: 37.120.192.158, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林), server: 213.183.53.177, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林), server: 213.183.53.214, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇷🇺 俄罗斯联邦-168.3KB/s(Youtube:不良林), server: 213.183.53.200, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
+  - {name: 🇷🇺 俄罗斯联邦-3.99MB/s(Youtube:不良林), server: 213.183.53.177, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
   - {name: 🇨🇦 加拿大-2.34MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, skip-cert-verify: true}
   - {name: 🇨🇳 中国-333.8KB/s(Youtube:不良林), server: aiajp1.game.www.klrxyru.cn, port: 1460, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
   - {name: 🇨🇳 中国-1.65MB/s(Youtube:不良林), server: relayjp2.vip.www.klrxyru.cn, port: 1452, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-943.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-168.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.99MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-333.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-943.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-168.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.99MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-333.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-943.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-168.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.99MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-333.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
@@ -73,11 +73,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-943.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-168.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.99MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-333.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
@@ -88,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-943.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-168.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.99MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-333.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
@@ -104,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-943.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-168.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.99MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-333.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
@@ -129,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-943.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-168.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.99MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
       - 🇨🇳 中国-333.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
